--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -227,3 +227,63 @@
     transform: rotate(0deg);
   }
 }
+/* ------------------------------ ORDER.JS ------------------------------ */
+
+.bg_lunch{
+  background-color: #B63C50;
+  float: left;
+  width: 55%;
+  /* display:flex; */
+}
+
+.bg_order{
+  background-color: #F8A000;
+  float: left;
+  width: 45%;
+  height: 1000px;
+  flex-direction: column;
+  display:flex;
+  align-items: center;
+}
+
+.data_client,.data_order{
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 3px rgba(0,0,0,0.1);
+  margin: 20px 0px;
+  padding: 5px 10px 35px 10px;
+  border-radius: 10px;
+  width: 80%;
+  flex-direction: column;
+  display:flex;
+  align-items: center;
+  
+}
+.input_group, .order_group{
+  border-top: 2.3px #881E3B solid;
+  padding-top: 15px;
+  margin-top: -10px;
+  width: 70%;
+}
+
+.input_group input{
+  margin-left: 20px;
+  margin-right: 5px;
+  box-shadow: 0px 4px rgba(0,0,0,0.1);
+  border-radius: 5px;
+  border: transparent;
+  height: 22px;
+  width: 40%;
+}
+.h3{
+  font-size: 13px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.send_order{
+  width: 70%;
+  height: 40px;
+  color: white;
+  font-size: large;
+  background-color: #F8A000;
+  border: rgba(255, 255, 255, 0.7) 2px solid;
+}
