--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -232,7 +232,7 @@
 .bg_order{
   background-color: #F8A000;
   float: left;
-  width: 45%;
+  width: 40%;
   height: 1000px;
   flex-direction: column;
   display:flex;
@@ -279,6 +279,7 @@
   font-size: large;
   background-color: #F8A000;
   border: rgba(255, 255, 255, 0.7) 2px solid;
+  box-shadow: 0px 6px rgba(0,0,0,0.1);
 }
 
 /* ------------------------------ LUNCH.JS ------------------------------ */
@@ -286,16 +287,59 @@
 .bg_lunch{
   background-color: #B63C50;
   float: left;
-  width: 55%;
+  width: 60%;
   /* display:flex; */
+}
+.ul{
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .li{
   background-color: white;
-  width: 150px;
-  height: 150px;
+  width: 245px;
+  height: 160px;
   display: flex;
+  flex-flow: row wrap;
   list-style: none;
   border-radius: 10px;
+  /* float: left; */
+  /* margin-left: 35px;
+  margin-bottom: 15px; */
+  margin: 30px;
+  /* grid-auto-columns: auto ; */
+  /* justify-content: space-between; */
+}
+.li img{
+  width: 40%;
+  height: 65%;
+  border-radius: 5px;
+  margin-left: 8px;
+  margin-top: 8px;
+  margin-right: 15px;
 
+}
+.texto_producto{
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 15px;
+  width: 50%;
+}
+.li h4{
+  margin-bottom: -10px;
+}
+.li button{
+  height: 28%;
+  width: 100%;
+  background-color: #F8A000;
+  border: transparent;
+  border-radius: 0px 0px 5px 5px;
+  margin-top: 10px;
+  color: white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  font-weight:500;
+  box-shadow: 0px 6px rgba(0,0,0,0.1);
 }
