--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -107,6 +107,7 @@
 .logo {
   position: relative;
 }
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -178,11 +179,9 @@
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
+    background: linear-gradient(to bottom,
+        rgba(var(--background-start-rgb), 1),
+        rgba(var(--callout-rgb), 0.5));
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
@@ -193,11 +192,9 @@
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
+    background: linear-gradient(to bottom,
+        transparent 0%,
+        rgb(var(--background-end-rgb)) 40%);
     z-index: 1;
   }
 }
@@ -223,79 +220,88 @@
   from {
     transform: rotate(360deg);
   }
+
   to {
     transform: rotate(0deg);
   }
 }
+
 /* ------------------------------ ORDER.JS ------------------------------ */
 
-.bg_order{
+.bg_order {
   background-color: #F8A000;
   float: left;
   width: 40%;
   height: 1000px;
   flex-direction: column;
-  display:flex;
+  display: flex;
   align-items: center;
 }
 
-.data_client,.data_order{
+.data_client,
+.data_order {
   background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 3px rgba(0,0,0,0.1);
+  box-shadow: 0px 3px rgba(0, 0, 0, 0.1);
   margin: 20px 0px;
   padding: 5px 10px 35px 10px;
   border-radius: 10px;
   width: 80%;
   flex-direction: column;
-  display:flex;
+  display: flex;
   align-items: center;
-  
+
 }
-.input_group, .order_group{
+
+.input_group,
+.order_group {
   border-top: 2.3px #881E3B solid;
   padding-top: 15px;
   margin-top: -10px;
   width: 70%;
 }
 
-.input_group input{
+.input_group input {
   margin-left: 20px;
   margin-right: 5px;
-  box-shadow: 0px 4px rgba(0,0,0,0.1);
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   border: transparent;
   height: 22px;
   width: 40%;
 }
-.h3{
+
+.h3 {
   font-size: 13px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
-.send_order{
+
+.send_order {
   width: 70%;
   height: 40px;
   color: white;
   font-size: large;
   background-color: #F8A000;
   border: rgba(255, 255, 255, 0.7) 2px solid;
-  box-shadow: 0px 6px rgba(0,0,0,0.1);
+  box-shadow: 0px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* ------------------------------ LUNCH.JS ------------------------------ */
 
-.bg_lunch{
+.bg_lunch {
   background-color: #B63C50;
   float: left;
   width: 60%;
+  margin-top: 100px;
   /* display:flex; */
 }
-.ul{
+
+.ul {
   display: flex;
   flex-flow: row wrap;
 }
 
-.li{
+.li {
   background-color: white;
   width: 245px;
   height: 160px;
@@ -310,7 +316,8 @@
   /* grid-auto-columns: auto ; */
   /* justify-content: space-between; */
 }
-.li img{
+
+.li img {
   width: 40%;
   height: 65%;
   border-radius: 5px;
@@ -319,7 +326,8 @@
   margin-right: 15px;
 
 }
-.texto_producto{
+
+.texto_producto {
   display: flex;
   flex-direction: column;
   justify-content: right;
@@ -327,10 +335,12 @@
   font-size: 15px;
   width: 50%;
 }
-.li h4{
+
+.li h4 {
   margin-bottom: -10px;
 }
-.li button{
+
+.li button {
   height: 28%;
   width: 100%;
   background-color: #F8A000;
@@ -340,6 +350,17 @@
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 20px;
-  font-weight:500;
-  box-shadow: 0px 6px rgba(0,0,0,0.1);
+  font-weight: 500;
+  box-shadow: 0px 6px rgba(0, 0, 0, 0.1);
 }
+
+/* ------------------------------ NAV.JS ------------------------------ */
+.option_menuOrder {
+  position: absolute;
+  width: 59.30%;
+  height: 100px;
+  background: #881E3B;
+  font-size:large;
+}
+
+
