--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -226,65 +226,6 @@
   }
 }
 
-/* ------------------------------ ORDER.JS ------------------------------ */
-
-.bg_order {
-  background-color: #F8A000;
-  float: left;
-  width: 40%;
-  height: 1000px;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-}
-
-.data_client,
-.data_order {
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 3px rgba(0, 0, 0, 0.1);
-  margin: 20px 0px;
-  padding: 5px 10px 35px 10px;
-  border-radius: 10px;
-  width: 80%;
-  flex-direction: column;
-  display: flex;
-  align-items: center;
-
-}
-
-.input_group,
-.order_group {
-  border-top: 2.3px #881E3B solid;
-  padding-top: 15px;
-  margin-top: -10px;
-  width: 70%;
-}
-
-.input_group input {
-  margin-left: 20px;
-  margin-right: 5px;
-  box-shadow: 0px 4px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  border: transparent;
-  height: 22px;
-  width: 40%;
-}
-
-.h3 {
-  font-size: 13px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-.send_order {
-  width: 70%;
-  height: 40px;
-  color: white;
-  font-size: large;
-  background-color: #F8A000;
-  border: rgba(255, 255, 255, 0.7) 2px solid;
-  box-shadow: 0px 6px rgba(0, 0, 0, 0.1);
-}
 
 /* ------------------------------ LUNCH.JS ------------------------------ */
 
@@ -292,7 +233,6 @@
   background-color: #B63C50;
   float: left;
   width: 60%;
-  margin-top: 100px;
   /* display:flex; */
 }
 
@@ -356,26 +296,89 @@
 
 /* ------------------------------ NAV.JS ------------------------------ */
 .NavbarItems{
-  /* position: absolute; */
-  width: 59.30%;
-  height: 100px;
-  background: #881E3B;
-  font-size:large;
+  font-size:x-large;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
   color: white;
-}
+  }
 
-.NavbarItems li{
-  display: inline;
-  list-style: none;
-  font-size: 18px;
-  padding: 10px;
+
+.NavbarOptions{
+  cursor: pointer;
+  width: 30%;
+  background: #881E3B;
   line-height: 80px;
-}
-.NavbarItems a{
-  color: white;
-  text-decoration: none;
+  padding: 24px 129px;
+  }
+
+/* ------------------------------ BREAKFAST.JS ------------------------------ */
+
+.bg_breakfast {
+  background-color: #B63C50;
+  float: left;
+  width: 60%;
+  /* display:flex; */
 }
 
+/* ------------------------------ ORDER.JS ------------------------------ */
+
+.bg_order {
+  background-color: #F8A000;
+  float: left;
+  width: 40%;
+  height: 1000px;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  margin-top: -80px;
+  
+}
+
+.data_client,
+.data_order {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 3px rgba(0, 0, 0, 0.1);
+  margin: 20px 0px;
+  padding: 5px 10px 35px 10px;
+  border-radius: 10px;
+  width: 80%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+
+}
+
+.input_group,
+.order_group {
+  border-top: 2.3px #881E3B solid;
+  padding-top: 15px;
+  margin-top: -10px;
+  width: 70%;
+}
+
+.input_group input {
+  margin-left: 20px;
+  margin-right: 5px;
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  border: transparent;
+  height: 22px;
+  width: 40%;
+}
+
+.h3 {
+  font-size: 13px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+.send_order {
+  width: 70%;
+  height: 40px;
+  color: white;
+  font-size: large;
+  background-color: #F8A000;
+  border: rgba(255, 255, 255, 0.7) 2px solid;
+  box-shadow: 0px 6px rgba(0, 0, 0, 0.1);
+}
 
