--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -389,3 +389,9 @@
   box-shadow: 0px 6px rgba(0, 0, 0, 0.1);
 }
 
+.items_quantity{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
