--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -392,6 +392,15 @@
 .items_quantity{
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
+}
+.buttonCount{
+  border-style: none;
+  border-radius: 50%;
+  width: 30.78px;
+height: 26px;
+background: #FFFFFF;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+margin: 5%;
 }
 
